[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/SupportScenes/UI/CharacterSelection/CharacterSelection.gd" type="Script" id=1]

[node name="CharacterSelection" type="Node2D"]
script = ExtResource( 1 )

[node name="Placeholder1" type="Node2D" parent="."]
position = Vector2( -33, 3 )

[node name="Placeholder2" type="Node2D" parent="."]
position = Vector2( 253, 3 )

[node name="Placeholder3" type="Node2D" parent="."]
position = Vector2( -33, 161 )

[node name="Placeholder4" type="Node2D" parent="."]
position = Vector2( 253, 161 )
